Module Selection
- add a module_selection module to handle modules and module_status configuration
- The modules table will store all tables while the module_status will store modules selected for a particular survey and track the config status
- Add endpoint to list all modules `/modules`
- Add endpoint to add modules for a survey `/module_status`
- Add endpoint to update config_status per survey and module `/api/modules/<int:module_id>/status/<int:survey_uid>`
- Add endpoint to list modules selected in survey `/api/module_status/<int:survey_uid>`
- Update docs with a module selection section
- import new module_selection_bp to app.py
